--- a/Client/src/Components/Nav.css
+++ b/Client/src/Components/Nav.css
@@ -66,7 +66,7 @@ nav{
 .button-59 {
   align-items: center;
   background-color: #fff;
-  border: 3px solid #6ea1ff;
+  border: 3px solid#fff;
   border-radius: 5px;
   box-sizing: border-box;
   color: #000;
