--- a/Client/src/Components/Nav.css
+++ b/Client/src/Components/Nav.css
@@ -63,6 +63,28 @@ nav{
   transition-duration: .1s;
 }
 
+.getstart-btn {
+  
+  background-color: #496BAA;;
+  border-radius: 5px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  height: 40px;
+  width: auto;
+  text-align: center;
+  transition: all .5s;
+  font-family: "Marcellus SC", serif;
+  font-size: 20px;
+  padding: 5px 10px;
+}
+
+.getstart-btn:hover {
+  box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
+  transition-duration: .1s;
+}
+
 .button-59 {
   align-items: center;
   background-color: #fff;
