--- a/Client/src/Pages/MainPage.css
+++ b/Client/src/Pages/MainPage.css
@@ -118,7 +118,6 @@
   height: calc(100% - 80px);
   margin-top: 10px;
   overflow-y: auto;
-  /* scrollbar-width: none; */
   display: grid;
   grid-template-columns: 1fr;
 }
@@ -138,9 +137,10 @@
 	border-radius: 10px;
 	background-color: rgba(80, 63, 205, 0.5);
 }
+
 .Complaint-Box{
   width: 95%;
-  height: 300px;
+  height: 350px;
   justify-self: center;
   margin-top: 10px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
@@ -148,63 +148,108 @@
   margin-bottom: 10px;
   display: flex;
   position: relative;
+  flex-direction: column;
 }
 
-.Complaint-data{
-  height: 100%;
-  width: 65%;
-  /* border: 1px solid red; */
-  border-radius: 8px;
-  padding: 10px;
+.Complaint-Box-title{
+  width: 100%;
+  height: 13%;
 }
 
-.complaint-img{
-  width: 35%;
-  height: 100%;
-  border-radius: 8px;
-  /* border: 1px solid red; */
+.Complaint-Box-title h1{
+  font-family: "Poppins", serif;
+  font-size: 4.5vh;
+  font-weight: 500;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
-  margin-right: 10px;
 }
 
-.arrow{
-  position: absolute;
-  width: 1.8rem;
-  height: 2rem;
-  color: white;
-  cursor: pointer;
-}
-
-.arrowleft{
-  left: 5px;
-}
-.arrowright{
-  right: 5px;
-}
-
-.indicators{
+.Complaint-lower{
+  width: 100%;
+  height: calc(100% - 13%);
   display: flex;
-  position: absolute;
-  bottom: 10px;
 }
 
-.dot{
-  background-color: black;
-  height: 6px;
-  width: 5px;
-  outline: none;
-  border: none;
-  border-radius: 100%;
-  margin: 0 2px;
-  pointer-events: none;
+.Complaint-lower-descp{
+  height: 100%;
+  width: 60%;
 }
 
-.slide{
+.Complaint-lower-right{
+  width: 40%;
+  height: 100%;
   border-radius: 8px;
 }
+
+.lower-right-img{
+  height: 50%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.lower-right-tags{
+  height: 50%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
+  padding: 20px;
+}
+
+.lower-descp-funct{
+  width: 100%;
+  height: 20%;
+  display: flex;
+  align-items: center;
+}
+
+.Complaint-vote{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 10px;
+  width: 15%;
+}
+
+.Complaint-vote h1{
+  font-size: 3.5vh;
+  font-family: "Poppins", serif;
+}
+
+.vote-arrows{
+  font-size: 150%;
+}
+
+.Complaint-comment{
+  margin-left: 30px;
+  display: flex;
+  width: 8%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Complaint-comment h1{
+  font-size: 3.5vh;
+  font-family: "Poppins", serif;
+}
+
+.Complaint-report{
+  margin-left: 30px;
+  justify-self: flex-end;
+}
+.vote-report{
+  font-size: 200%;
+}
+
+.Complaint-descp{
+  padding: 10px;
+  height: 80%;
+}
+
 
 .Comaplaint-functionalities{
   position: absolute;
@@ -216,10 +261,10 @@
 }
 
 .function-reviewTag{
+  margin: 10px;
   height: 30px;
   width: auto;
   border-radius: 35px;
-  margin-left: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -230,19 +275,19 @@
   font-size: 15px;
   font-weight: 500;
   margin: 0 10px;
-  
 }
 
 .function-Type{
+  margin: 10px;
   height: 30px;
   width: auto;
   border: 1px solid black;
   border-radius: 35px;
-  margin-left: 15px;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .function-Type h1{
   font-family: "Poppins", serif;
   font-size: 15px;
@@ -258,38 +303,7 @@
   height: 100%;
 }
 
-.upvote,.downvote{
-  display: flex;
-  align-items: center;
+.complaint-img-size{
+  height: 100%;
 }
 
-.function-vote h1{
-  font-size: 25px;
-  font-family: "Poppins", serif;
-}
-
-.function-comment{
-  margin-left: 15px;
-}
-
-.Complaint-title h1{
-  font-size: 30px;
-  font-family: "Poppins", serif;
-  font-weight: 600;
-}
-
-.Complaint-descp{
-  height: 200px;
-}
-.Complaint-descp p{
-  font-size: 18px;
-  font-family: "Poppins", serif;
-}
-
-.slideHidden{
-  display: none;
-}
-
-.dot-inactive{
-  background-color: grey;
-}
