getting complaints by createdby field

--- a/Client/src/Components/CSS/Nav.css
+++ b/Client/src/Components/CSS/Nav.css
@@ -65,7 +65,7 @@ nav{
 
 .getstart-btn {
   
-  background-color: #496BAA;;
+  background-color: #496BAA;
   border-radius: 5px;
   border-style: none;
   box-sizing: border-box;
