--- a/Client/src/Components/CSS/UserDashboard.css
+++ b/Client/src/Components/CSS/UserDashboard.css
@@ -5,34 +5,36 @@
 }
 
 .Sidenav{
-    width: 300px;
+    width: 250px;
     height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    padding: 10px;
+    border-right: 2.5px solid rgb(235, 235, 235);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .Sidenav1{
     width: 100%;
     height: 100%;
-    border-radius: 10px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-color: rgba(80, 63, 205, 0.5);
 }
 
 .logoSidenav{
     height: 60px;
     width: 60px;
-    background-image: url(../Assets/Logo.png);
+    background-image: url(./Logo.png);
     background-size: cover;
 }
 
 .SideNav-logo{
-    width: 100%;
+    width: 98%;
     height: 70px;
     padding:10px;
     display: flex;
@@ -48,14 +50,14 @@
 .userDetail{
     width: 240px;
     height: 70px;
-    /* border: solid 1px rgb(201, 201, 201); */
     border-radius: 5px;
     margin: 5px;
     display: flex;
     align-items: center;
     justify-content: space-around;
     margin-top: 15px;
-    background-color: #fff;
+    background-color: #e4edff;
+    cursor: pointer;
 }
 
 .userDetail h1{
@@ -72,17 +74,16 @@
 
 .UserOptions{
     width: 240px;
-    height: 50px;
+    height: 40px;
     border-radius: 5px;
     margin: 5px;
     display: flex;
     align-items: center;
-    transition: 0.2s;
     margin-top: 10px;
 }
 
 .UserOptions h1{
-    font-size: 20px;
+    font-size: 18px;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
     margin-left: 5px;
@@ -101,7 +102,17 @@
 }
 
 .UserOptions:hover{
-    /* box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 2px 0px, rgba(0, 0, 0, 0.35) 0px 1px 3px 1px; */
     cursor: pointer;
-    background-color: #ffffff;
+    background-color: #aec1e9;
+    color: #164191;
 }
+
+.Dashboard-icons{
+    color: 'black';
+    size: '50px';
+}
+
+.Dashboard-icons:hover{
+    color: #fff;
+}
+  
