added error handling based on codium review

--- a/Client/src/Pages/CSS/ProfileEdit.css
+++ b/Client/src/Pages/CSS/ProfileEdit.css
@@ -13,21 +13,35 @@
 
 .ProfileEdit-box{
     height: 90%;
-    width: 500px;
-    border: 1px solid red;
+    width: 450px;
     display: flex;
     /* justify-content: center; */
     flex-direction: column;
     align-items: center;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .Profile-img{
     border-radius: 50%;
     height: 200px;
     width: 200px;
-    border: 1px solid red;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .Profile-username,.Profile-email{
     width: 80%;
+}
+
+.ProfileEdit-Cancel-btn{
+    height: 40px;
+    width: 60px;
+    border:1px solid red;
+}
+
+.ProfileEdit-Edit-btn{
+    height: 40px;
+    width: 60px;
+    border:1px solid green;
 }
