--- a/Client/src/Pages/CSS/CommunitiesPage.css
+++ b/Client/src/Pages/CSS/CommunitiesPage.css
@@ -12,7 +12,7 @@
 }
 
 .CommunityPage-box {
-  width: 350px;
+  width: 22vw;
   height: 470px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
