--- a/Client/src/Pages/CSS/AdminPage.css
+++ b/Client/src/Pages/CSS/AdminPage.css
@@ -6,7 +6,20 @@
 .AdminPage-body {
   width: calc(100% - 250px);
   height: 100%;
-  border: 1px solid red;
+  overflow-y: auto;
+}
+
+.AdminPage-body::-webkit-scrollbar {
+  width: 0.5vw;
+}
+
+.AdminPage-body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+.AdminPage-body::-webkit-scrollbar-thumb {
+  background-color: rgba(80, 63, 205, 0.5);
 }
 
 .Admin-SearchBar {
@@ -45,19 +58,22 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  flex-wrap: wrap;
 }
 
 .Admin-Complaint-box {
   width: 45%;
   min-height: 500px;
   max-height: auto;
-  border: 1px solid red;
+  margin-top: 20px;
   display: flex;
+  padding: 5px 0;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border-radius: 5px;
 }
 
 .Admin-Complaint-box-left {
   width: 60%;
-  border: 1px solid black;
 }
 
 .Admin-Complaint-img {
@@ -71,16 +87,20 @@
 .Admin-Complaint-title h1 {
   font-size: 25px;
   font-family: "Poppins", serif;
+  margin-left: 5px;
+}
+
+.Admin-Complaint-descp{
+  padding: 5px;
 }
 
 .Admin-Complaint-descp p {
-  font-size: 20px;
+  font-size: 18px;
   font-family: "Poppins", serif;
 }
 
 .Admin-Complaint-box-right{
   width: 40%;
-  border: 1px solid black;
 }
 
 .Admin-Complaint-Functions{
@@ -97,4 +117,14 @@
   padding: 0px 5px;
   margin: 10px;
   width: 100px;
+}
+
+.complaint-img-size{
+  height: 100%;
+}
+
+.Admin-Complaint-box-right h1{
+  font-size: 18px;
+  font-family: "Poppins", serif;
+  margin-left: 5px;
 }
