--- a/Client/src/Pages/CSS/CommentPage.css
+++ b/Client/src/Pages/CSS/CommentPage.css
@@ -17,7 +17,7 @@
   position: relative;
 }
 
-.Community-descp-main {
+.Comment-descp-main {
   width: 550px;
   height: 100vh;
   color: #fff;
@@ -27,7 +27,7 @@
   align-items: center;
 }
 
-.Community-descp-box {
+.Comment-descp-box {
   width: 420px;
   margin: 20px 0;
   height: 100%;
@@ -39,22 +39,22 @@
   background-color: #fff;
 }
 
-.Community-descp-box::-webkit-scrollbar {
+.Comment-descp-box::-webkit-scrollbar {
   width: 0.4vw;
 }
 
-.Community-descp-box::-webkit-scrollbar-track {
+.Comment-descp-box::-webkit-scrollbar-track {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
 }
 
-.Community-descp-box::-webkit-scrollbar-thumb {
+.Comment-descp-box::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: rgba(80, 63, 205, 0.5);
 }
 
-.Community-descp-box-desc {
+.Comment-descp-box-desc {
   height: auto;
   padding: 10px;
   text-align: center;
@@ -62,13 +62,13 @@
   color: black;
 }
 
-.Community-descp-box-rules {
+.Comment-descp-box-rules {
   height: auto;
   padding: 10px;
   font-family: "Poppins", sans-serif;
 }
 
-.Community-descp-box-rules h1 {
+.Comment-descp-box-rules h1 {
   font-size: 30px;
   font-family: "Poppins", sans-serif;
 }
@@ -156,7 +156,6 @@
 .Comment-Complaint-post {
   position: absolute;
   bottom: 0;
-  /* border: 1px solid black; */
   height: 200px;
   width: 85%;
 }
@@ -311,4 +310,28 @@
 
 .post-comment {
   margin-left: 20px;
+}
+
+.Comment-Box{
+  width: 90%;
+  min-height: 150px;
+  border: 1px solid #000000;
+  margin: 10px 0;
+  border-radius: 5px;
+}
+
+.Comment-Box-title{
+  height: 50px;
+  border: 1px solid #000000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.Comment-Box-logo{
+  height: 50px;
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
