--- a/Client/src/Pages/CSS/CommunitiesPage.css
+++ b/Client/src/Pages/CSS/CommunitiesPage.css
@@ -9,7 +9,24 @@
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 10px 0;
+  overflow-y: auto;
 }
+
+.Communities-body::-webkit-scrollbar {
+  width: 0.5vw;
+}
+
+.Communities-body::-webkit-scrollbar-track {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+.Communities-body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(80, 63, 205, 0.5);
+}
+
 
 .CommunityPage-box {
   width: 22vw;
