--- a/Client/src/Pages/CSS/CommunitiesPage.css
+++ b/Client/src/Pages/CSS/CommunitiesPage.css
@@ -51,14 +51,14 @@
   height: 50px;
   text-align: center;
   font-family: "Poppins", sans-serif;
-  font-size: 40px;
-  font-size: 500;
+  font-size: 20px;
+  font-size: 700;
 }
 
 .Community-box-desc {
   height: 150px;
   padding: 10px;
-  text-align: center;
+  /* text-align: center; */
   font-family: "Poppins", sans-serif;
 }
 
@@ -121,4 +121,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.viewMoreBtn{
+  font-size: 13px;
+  font-family: "Poppins", sans-serif;
+  color: #06f;
 }
