--- a/Client/src/Pages/CSS/MainPage.css
+++ b/Client/src/Pages/CSS/MainPage.css
@@ -326,3 +326,75 @@
 .arrows-fill {
   color: #2f60b9;
 }
+
+.MainPage-community-name{
+  width: 90%;
+  height: auto;
+  border-radius: 5px;
+  padding: 0 5px;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.MainPage-community-name h1{
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  text-align: center;
+}
+
+.MainPage-community-name button{
+  width: 40%;
+  height: 30px;
+  background-color: #f5f6fa;
+  border-radius: 5px;
+  border: 3px dashed #2f60b9;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: #2f60b9;
+  transition: .3s;
+}
+
+.MainPage-community-name button:hover{
+  background-color: #2f60b9;
+  color: #f5f6fa;
+  border: #2f60b9 3px solid;
+}
+
+.Join-community-btn-img{
+  width: 20px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.community-btn-img{
+  width: 30px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #2f60b9;
+}
+
+.MainPage-community-name-function{
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  display: flex;
+  align-items: center;
+}
+
+.community-function-members{
+  width: 30%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: #2f60b9;
+}
