--- a/Client/src/Pages/CSS/MainPage.css
+++ b/Client/src/Pages/CSS/MainPage.css
@@ -349,7 +349,7 @@
   padding: 0 5px;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-    margin: 10px 0px;
+    margin: 15px 0px;
 }
 
 .MainPage-community-name h1 {
@@ -414,4 +414,12 @@
   justify-content: space-around;
   align-items: center;
   color: #2f60b9;
+}
+
+.MainPage-side-Navbar>h1{
+  font-size: 25px;
+  font-family: "Marcellus SC", serif;
+  font-weight: 600;
+  margin: 10px;
+  text-align: center;
 }
