--- a/Client/src/Pages/CSS/LogComplaint.css
+++ b/Client/src/Pages/CSS/LogComplaint.css
@@ -92,10 +92,10 @@
 }
 
 #cancel {
-  background-color: #E55842;
+  background-color: #e55842;
 }
 #submit {
-  background-color: #3CED6F;
+  background-color: #3ced6f;
 }
 
 .Complaint-main-body {
