--- a/Client/src/Components/CSS/Nav.css
+++ b/Client/src/Components/CSS/Nav.css
@@ -1,94 +1,65 @@
-@import url('https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Marcellus+SC&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Marcellus+SC&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Salsa&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
-nav{
-    height: 12vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    
+.logoImg {
+  height: 3rem;
+  width: 3rem;
+  background-size: cover;
 }
 
-.logo{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 200px;
-    height: 100%;
-    margin: 2px;
-}
-
-.logoImg{
-    height: 60px;
-    width: 60px;
-    background-image: url(./Logo.png);
-    background-size: cover;
-}
-
-.logo h1{
-    font-size: 30px;
-    font-family: "Marcellus SC", serif;
-}
-
-.navList{
-    height: 100%;
-    width: 450px;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.navList h1{
-  font-size: 25px;
-  font-family: "Marcellus SC", serif;
+.logo {
+  font-size: 30px;
+  font-family: "PT Serif", serif;
+  font-weight: 500;
+  margin-left: 10px;
 }
 
 .SignUp-btn {
-  
-  background-color: #496BAA;;
+  background-color: #496baa;
   border-radius: 5px;
   border-style: none;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
   height: 40px;
   width: 100px;
   text-align: center;
-  transition: all .5s;
+  transition: all 0.5s;
   font-family: "Marcellus SC", serif;
   font-size: 20px;
 }
 
 .SignUp-btn:hover {
   box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-  transition-duration: .1s;
+  transition-duration: 0.1s;
 }
 
 .getstart-btn {
-  
-  background-color: #496BAA;
+  background-color: #496baa;
   border-radius: 5px;
   border-style: none;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #ffffff;
   cursor: pointer;
   height: 40px;
   width: auto;
   text-align: center;
-  transition: all .5s;
+  transition: all 0.5s;
   font-family: "Marcellus SC", serif;
   font-size: 20px;
   padding: 5px 10px;
+  margin-left: 60px;
 }
 
 .getstart-btn:hover {
   box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
-  transition-duration: .1s;
+  transition-duration: 0.1s;
 }
 
 .button-59 {
   align-items: center;
   background-color: #fff;
-  border: 3px solid#fff;
+  border: 3px solid#496BAA;
   border-radius: 5px;
   box-sizing: border-box;
   color: #000;
@@ -99,7 +70,6 @@ nav{
   justify-content: center;
   text-align: center;
   text-decoration: none;
-  transition: all .3s;
   font-family: "Marcellus SC", serif;
   font-size: 20px;
 }
@@ -109,13 +79,131 @@ nav{
 }
 
 .button-59:hover {
-  border-color: #496BAA;
-  color: #496BAA;
-  fill: #496BAA;
+  border-color: #496baa;
+  color: #496baa;
+  fill: #496baa;
 }
 
 .button-59:active {
-  border-color: #496BAA;
-  color: #496BAA;
-  fill: #496BAA;
+  border-color: #496baa;
+  color: #496baa;
+  fill: #496baa;
+}
+
+@media screen and (max-width: 640px) {
+}
+
+.media {
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  color: #fff;
+  height: 60px;
+  position: relative;
+  z-index: 1000;
+  color: black;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo h1 {
+  margin-left: 10px;
+}
+
+.navList {
+  display: flex;
+  align-items: center;
+  list-style: none;
+}
+
+.navList a {
+  margin: 0 10px;
+  text-decoration: none;
+}
+
+button {
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 1000;
+}
+
+@media (max-width: 768px) {
+  .navList {
+    display: none;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 10px;
+    width: 40%;
+    margin-left: 60%;
+    height: calc(30vh - 60px);
+    margin-top: 60px;
+    background-color: rgb(255, 255, 255);
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+    background-color: #171e294b;
+    border-radius: 5px;
+    margin-right: 10px;
+  }
+
+  .navList.open {
+    display: flex;
+  }
+
+  .navList a {
+    margin: 10px 0;
+    font-size: 24px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hamburger {
+    display: flex;
+  }
+
+  .SignUp-btn,
+  .button-59 {
+    width: 90%;
+    height: 35px;
+  }
+  .logoImg {
+    height: 2rem;
+    width: 2rem;
+    background-size: cover;
+  }
+
+  .logo {
+    font-size: 20px;
+    font-family: "PT Serif", serif;
+    font-weight: 500;
+    margin-left: 10px;
+  }
+  .media {
+    display: none;
+    width: 0;
+  }
+  .media1 {
+    width: 100%;
+  }
 }
