--- a/Client/src/Pages/CSS/CommentPage.css
+++ b/Client/src/Pages/CSS/CommentPage.css
@@ -119,7 +119,8 @@
   font-size: 30px;
 }
 
-.Complaint-function-Area,.Complaint-function-type{
+.Complaint-function-Area,
+.Complaint-function-type {
   margin-left: 20px;
 }
 
@@ -194,14 +195,14 @@
   outline: none;
 }
 
-.Comment-btn-flex{
+.Comment-btn-flex {
   display: flex;
   align-items: center;
   justify-content: end;
   width: 90%;
 }
 
-.comment-btn{
+.comment-btn {
   margin-top: 20px;
   padding: 5px 10px;
   border-radius: 5px;
@@ -221,7 +222,7 @@
   background-color: rgb(18, 24, 65);
 }
 
-.Comment-Box{
+.Comment-Box {
   width: 90%;
   min-height: 150px;
   border: 1px solid #000000;
@@ -229,7 +230,7 @@
   border-radius: 5px;
 }
 
-.Comment-Box-title{
+.Comment-Box-title {
   height: 50px;
   border: 1px solid #000000;
   display: flex;
@@ -237,7 +238,7 @@
   justify-content: space-between;
 }
 
-.Comment-Box-logo{
+.Comment-Box-logo {
   height: 50px;
   width: 50px;
   display: flex;
