--- a/Client/src/Pages/CSS/ProfileEdit.css
+++ b/Client/src/Pages/CSS/ProfileEdit.css
@@ -1,49 +1,190 @@
-.ProfileEdit-main {
+.profileEditMain {
+  width: calc(100vw - 250px);
   height: 100vh;
+  /* border: 1px solid black; */
   display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: auto;
 }
 
-.ProfileEdit-body {
-  width: calc(100% - 250px);
+.MyComplaint-body::-webkit-scrollbar {
+  width: 0.5vw;
+}
+
+.MyComplaint-body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+.MyComplaint-body::-webkit-scrollbar-thumb {
+  background-color: rgba(80, 63, 205, 0.5);
+}
+
+.profileImageDiv {
+  width: 45%;
   height: 100%;
+  /* border: 1px solid black; */
   display: flex;
   align-items: center;
-  justify-content: center;
-}
-
-.ProfileEdit-box {
-  height: 90%;
-  width: 450px;
-  display: flex;
-  /* justify-content: center; */
   flex-direction: column;
-  align-items: center;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
-    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+
 }
 
-.Profile-img {
+.profileImage {
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
-  height: 200px;
-  width: 200px;
+  /* border: 1px solid black; */
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px,
+    rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  margin: 30px 0;
+  overflow: hidden;
+}
+
+.profileEditDetail {
+  width: 100%;
+  height: calc(50%);
   display: flex;
   align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  padding: 10px;
 }
 
-.Profile-username,
-.Profile-email {
-  width: 80%;
+.profileEditComplaints {
+  width: 65%;
+  /* border: 1px solid red; */
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
 }
 
-.ProfileEdit-Cancel-btn {
-  height: 40px;
-  width: 60px;
-  border: 1px solid red;
+.profileEditPersonal {
+  width: 100%;
+  height: 150px;
+  box-shadow: rgba(0, 0, 0, 0.726) 0px 3px 8px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  padding: 10px;
+  border-radius: 5px;
+  position: relative;
 }
 
-.ProfileEdit-Edit-btn {
-  height: 40px;
-  width: 60px;
-  border: 1px solid green;
+.profileEditName {
+  width: 95%;
+  border-bottom: 1px solid black;
+  height: 60px;
+  padding: 5px;
+}
+
+.profileEditName h6 {
+  font-size: 12px;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  color: grey;
+}
+
+.profileEditName h1 {
+  font-size: 22px;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+}
+
+.profileEditBio {
+  width: 100%;
+  height: 200px;
+  box-shadow: rgba(0, 0, 0, 0.726) 0px 3px 8px;
+  margin-top: 10px;
+  border-radius: 5px;
+  padding: 10px 20px;
+  position: relative;
+}
+
+.profileEditBio h1 {
+  font-size: 25px;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+  color: grey;
+  /* margin-left: 10px; */
+}
+
+.profileBioEditLogo {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.profileBioEditPen {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  color: black;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.profilePerEditPen {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+  color: black;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+.profileComplaintLiked {
+  height: 45%;
+  width: 95%;
+  box-shadow: rgba(0, 0, 0, 0.726) 0px 3px 8px;
+  margin-top: 20px;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.profileComplaintCommented {
+  height: 45%;
+  width: 95%;
+  box-shadow: rgba(0, 0, 0, 0.726) 0px 3px 8px;
+  margin: 20px;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.profileComplaintLiked,
+.profileComplaintCommented h1 {
+  font-size: 25px;
+  font-family: "Poppins", serif;
+  font-weight: 500;
+}
+
+.profileLikedPost {
+  width: 100%;
+  /* border: 1px solid black; */
+  height: 250px;
+  border-radius: 5px 0 0 5px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.profileLikedBox {
+  width: 98%;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  border: 1px solid black;
+  margin-top: 10px;
+  border-radius: 5px;
+}
+
+.profileLikedBox h1 {
+  font-size: 15px;
 }
