--- a/Client/src/Pages/CSS/ProfileEdit.css
+++ b/Client/src/Pages/CSS/ProfileEdit.css
@@ -1,3 +1,9 @@
+.UserProfileEditBody{
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+}
+
 .profileEditMain {
   width: calc(100vw - 250px);
   height: 100vh;
