--- a/Client/src/Components/CSS/UserDashboard.css
+++ b/Client/src/Components/CSS/UserDashboard.css
@@ -49,27 +49,36 @@
 
 .userDetail{
     width: 240px;
-    height: 70px;
+    height: 50px;
     border-radius: 5px;
     margin: 5px;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     margin-top: 15px;
     background-color: #e4edff;
     cursor: pointer;
 }
 
 .userDetail h1{
-    font-size: 22px;
+    font-size: 20px;
     font-family: "Poppins", sans-serif;
     font-weight: 500;
+    margin-left: 20px;
+    display: flex;
+    align-items: center;
 }
 
-.userDetail p{
-    font-size: 12px;
-    font-family: "Poppins", sans-serif;
-    color: #3d3d3d;
+.userDetail:hover{
+    background-color: #aec1e9;
+    color: #164191;
+}
+
+.userDetailProfilePic{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .UserOptions{
