--- a/Client/src/Pages/CSS/LoginPage.css
+++ b/Client/src/Pages/CSS/LoginPage.css
@@ -21,7 +21,7 @@
 }
 
 .LoginPage-Body {
-  width: 470px;
+  width: 400px;
   height: 80%;
 }
 
@@ -64,7 +64,7 @@
   justify-content: center;
   padding: 0px;
   text-align: center;
-  height: 50px;
+  height: 40px;
   width: 100%;
 }
 
@@ -127,7 +127,7 @@ p {
 }
 
 .Admin-logo {
-  font-size: 30px;
+  font-size: 25px;
 }
 
 .LoginPage-Admin-Logo {
@@ -142,14 +142,14 @@ p {
 
 .LoginPage-Admin-Logo h1 {
   font-family: "Poppins", sans-serif;
-  font-size: 20px;
+  font-size: 18px;
   margin-left: 2px;
   font-weight: 500;
 }
 
 .LoginPage-admin p {
   font-family: "Poppins", sans-serif;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .LoginPage-admin u {
@@ -167,4 +167,43 @@ p {
   justify-content: center;
   height: 100vh;
   width: 100%;
+}
+
+.input {
+  border: 1px solid #ccc;
+  padding: 10px;
+  border-radius: 6px;
+  box-sizing: border-box;
+  width: 100%;
+  margin-bottom: 5px;
+  font-family: "Poppins", sans-serif;
+}
+
+.input:focus {
+  border-color: #1976D2;
+}
+
+.input-error {
+  border-color: red;
+}
+
+.error-text {
+  color: red;
+  font-size: 12px;
+}
+
+.custom-google-button {
+  display: flex;
+  justify-content: center;
+  margin: 10px 0;
+}
+
+#password-input:active {
+  border: 1px solid #1976D2;
+  font-family: "Poppins", sans-serif;
+
+}
+
+#password-input:focus {
+  border: 1px solid #1976D2;
 }
