--- a/Client/src/Pages/CSS/MainPage.css
+++ b/Client/src/Pages/CSS/MainPage.css
@@ -15,13 +15,12 @@
   height: 100%;
   display: flex;
   justify-content: center;
-  padding: 10px;
+  padding: 0 0 0 10px;
 }
 
 .MainPage-side-Navbar {
   width: 100%;
-  border-radius: 10px;
-  border: 1px solid black;
+  border-left: 2.5px solid rgb(199, 199, 199);
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -357,6 +356,7 @@
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   margin: 15px 0px;
+  background-color: #E2EBFF;;
 }
 
 .MainPage-community-name h1 {
@@ -369,7 +369,7 @@
 .MainPage-community-name button {
   width: 40%;
   height: 30px;
-  background-color: #f5f6fa;
+  background-color: #E2EBFF;
   border-radius: 5px;
   border: 3px dashed #2f60b9;
   font-size: 20px;
@@ -443,4 +443,20 @@
   align-items: center;
   height: 100%;
   width: 100%;
+}
+
+.joined-all-communities-message{
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+.joined-all-communities-message h1{
+  font-size: 25px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  text-align: center;
+  color: #0000008e;
+  margin-top: 30px;
 }
