--- a/Client/src/Pages/CSS/ProfileEdit.css
+++ b/Client/src/Pages/CSS/ProfileEdit.css
@@ -47,6 +47,9 @@
   margin: 30px 0;
   overflow: hidden;
   position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .profileImageEditLogoDiv{
@@ -233,4 +236,8 @@
 .b{
   width: 100px;
   height: 50px;
+}
+
+.profileImageCircle{
+  width: 100%;
 }
