--- a/Client/src/Pages/CSS/LandingPage.css
+++ b/Client/src/Pages/CSS/LandingPage.css
@@ -7,7 +7,7 @@
   justify-content: baseline;
   flex-direction: column;
   position: relative;
-  background-color: #f1e8e3ab;
+  background-color: #fff;
 }
 
 .landingMainTitle {
