--- a/Client/src/Pages/CSS/CommentPage.css
+++ b/Client/src/Pages/CSS/CommentPage.css
@@ -39,6 +39,48 @@
   background-color: #fff;
 }
 
+.CommentComplaint{
+  height: 75vh;
+  overflow-y: auto;
+}
+
+.CommentComplaint::-webkit-scrollbar {
+  width: 0.4vw;
+}
+
+.CommentComplaint::-webkit-scrollbar-track {
+  /* border-radius: 10px; */
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+.CommentComplaint::-webkit-scrollbar-thumb {
+  /* border-radius: 10px; */
+  background-color: rgba(80, 63, 205, 0.5);
+}
+
+.CommentComplaint h1{
+  font-size: 35px;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  margin: 5px 5px;
+}
+
+.CommentComplaintImg{
+  width: 100%;
+  height: 300px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+}
+
+.CommentComplaintDescp p{
+  padding: 0 10px;
+  font-size: 20px;
+  font-family: "Poppins", sans-serif;
+}
+
 .Comment-descp-box::-webkit-scrollbar {
   width: 0.4vw;
 }
@@ -80,7 +122,31 @@
 }
 
 .Comment-Complaint {
-  height: auto;
+  height: 40%;
+  overflow-y: auto;
+}
+
+
+.Comment-Complaint::-webkit-scrollbar {
+  width: 0.4vw;
+}
+
+.Comment-Complaint::-webkit-scrollbar-track {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #f5f5f5;
+}
+
+.Comment-Complaint::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: rgba(80, 63, 205, 0.5);
+}
+
+.Comment-Complaint h1{
+  font-size: 35px;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  margin: 5px 5px;
 }
 
 .Comment-Complaint-img {
@@ -97,14 +163,25 @@
 }
 
 .Comment-Complaint-descp {
+  margin: 15px;
   padding: 10px;
+  font-size: 30px;
+  font-family: "Poppins", sans-serif;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px, rgb(51, 51, 51) 0px 0px 0px 3px;
+  border-radius: 5px;
 }
+
+
 .Comment-Complaint-function {
   width: 100%;
-  /* border: 1px solid red; */
   display: flex;
   align-items: center;
-  padding: 10px 0;
+  padding: 10px 10px;
+}
+
+.Comment-Complaint-function h1{
+  font-size: 25px;
+  font-family: "Poppins", sans-serif;
 }
 
 .Complaint-function-votes {
@@ -143,12 +220,17 @@
   width: 100%;
   border-radius: 50px;
   border: 1px solid black;
+  padding: 3px;
+}
+.Complaint-chip h1{
+  font-size: 18px;
+  font-family: "Poppins", sans-serif;
 }
 
 .Comment-Complaint-post {
   position: absolute;
   bottom: 0;
-  height: 200px;
+  height: 25vh;
   width: 85%;
 }
 
@@ -237,13 +319,22 @@
   align-items: center;
   justify-content: space-between;
 }
-
+/* 
 .Comment-Box-logo {
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
+} */
+
+.CommentBoxTitle{
+  height: 50px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
 }
 
 .User-img{
@@ -251,4 +342,11 @@
   width: 40px;
   border-radius: 50%;
   overflow: hidden;
+  margin-left: 5px;
+}
+
+.CommentBoxTitleUser{
+  display: flex;
+  align-items: center;
+  
 }
