--- a/Client/src/Pages/CSS/Community.css
+++ b/Client/src/Pages/CSS/Community.css
@@ -45,8 +45,7 @@
 
 .Community-descp-box {
   width: 90%;
-  height: 90%;
-  border: 1px solid red;
+  height: 100%;
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -59,13 +58,11 @@
 }
 
 .Community-descp-box::-webkit-scrollbar-track {
-  border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: #f5f5f5;
 }
 
 .Community-descp-box::-webkit-scrollbar-thumb {
-  border-radius: 10px;
   background-color: rgba(80, 63, 205, 0.5);
 }
 
@@ -131,7 +128,7 @@
 
 .User-post {
   margin: 5px;
-  height: 22vh;
+  height: 26vh;
   padding: 10px;
 }
 
@@ -160,6 +157,7 @@
   /* border: 1px solid red; */
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .user-detail-profile {
@@ -197,4 +195,8 @@
 
 .Post-list-descp {
   padding: 10px;
+}
+
+.post-timestamp{
+  margin-right: 20px;
 }
