--- a/Client/src/Pages/CSS/MyComplaint.css
+++ b/Client/src/Pages/CSS/MyComplaint.css
@@ -7,7 +7,7 @@
   width: calc(100vw - 250px);
   height: 100%;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   flex-wrap: wrap;
   overflow-y: auto;
 }
@@ -39,7 +39,7 @@
 }
 
 .MyComplaint-complaint-box {
-  height: auto;
+  height: 600px;
   width: 380px;
   border-radius: 5px;
   margin: 15px 20px;
